[project]
name = "nas-sys-monitoring"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ezsnmp>=2.1.0",
    "fastapi>=0.135.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "pydantic>=2.12.5",
    "requests>=2.32.5",
    "uvicorn>=0.42.0",
    "zarr>=3.1.5",
]
